# dbt-etlcraft

./: .gitignore  LICENSE  README.md  dbt_project.yml  package-lock.yml  packages.yml
.obsidian/: workspace.json
airflow_providers/apache-airflow-providers-datacraft/: LICENSE.txt  README.md  pyproject.toml
airflow_providers/apache-airflow-providers-datacraft-airbyte/: pyproject.toml
airflow_providers/apache-airflow-providers-datacraft-airbyte/airflow/providers/datacraft/airbyte/: __init__.py  enums.py  models.py  provider.py
airflow_providers/apache-airflow-providers-datacraft-airbyte/airflow/providers/datacraft/airbyte/operators/: __init__.py  airbyte_create_connection_operator.py  airbyte_create_destination_definitions_operator.py  airbyte_create_destination_operator.py  airbyte_create_source_definitions_operator.py  airbyte_create_source_operator.py  airbyte_list_connections_operator.py  airbyte_list_destinations_operator.py  airbyte_list_jobs_operator.py  airbyte_list_source_definitions_operator.py  airbyte_list_sources_operator.py  airbyte_sync_sensor.py  airbyte_trigger_sync_operator.py  airbyte_update_connection_operator.py  airbyte_update_destination_definitions_operator.py  airbyte_update_destination_operator.py  airbyte_update_source_definitions_operator.py  airbyte_update_source_operator.py
airflow_providers/apache-airflow-providers-datacraft-dags/: pyproject.toml
airflow_providers/apache-airflow-providers-datacraft-dags/airflow/providers/datacraft/dags/: __init__.py  exceptions.py
airflow_providers/apache-airflow-providers-datacraft-dags/airflow/providers/datacraft/dags/configs/: get_configs.py
airflow_providers/apache-airflow-providers-datacraft-dags/airflow/providers/datacraft/dags/dag_builder/: dag_builder.py
airflow_providers/apache-airflow-providers-datacraft-dags/airflow/providers/datacraft/dags/dags/: template_configs_dag.py
airflow_providers/apache-airflow-providers-datacraft/airflow/providers/datacraft/: __init__.py  get_provider_info.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/: __init__.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/: conftest.py  object_deleters.py  pytest.ini
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/: test_get_variable.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/datacraft_airbyte/operators/: test_airbyte_create_connection_operator.py  test_airbyte_create_destination_definitions_operator.py  test_airbyte_create_source_definitions_operator.py  test_airbyte_list_connections_operator.py  test_airbyte_list_destination_definitions_operator.py  test_airbyte_list_destination_operator.py  test_airbyte_list_jobs_operator.py  test_airbyte_list_source_definitions_operator.py  test_airbyte_list_sources_operator.py  test_airbyte_list_workspaces_operator.py  test_airbyte_update_destination_definitions_operator.py  test_airbyte_update_source_definitions_operator.py  test_create_destination_operator.py  test_create_source_operator.py  test_update_destination_operator.py  test_update_source_operator.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/datacraft_dags/: test_dags.py  test_get_configs.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/datacraft_defaults/: test_get_datacraft_defaults.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/fixtures/: airflow_variables.py
airflow_providers/apache-airflow-providers-datacraft/etlcraft_tests/providers/unit_tests/utils/: init_db.py
airflow_providers/apache-airflow-providers-datacraft/tests/providers/unit_tests/: test_get_variable.py
airflow_providers/apache_airflow_providers_datacraft_airbyte/: pyproject.toml
airflow_providers/apache_airflow_providers_datacraft_airbyte/src/apache_airflow_providers_etlcraft_airbyte/: __init__.py
airflow_providers/apache_airflow_providers_etlcraft/: README.md  pyproject.toml
airflow_providers/apache_airflow_providers_etlcraft/src/apache_airflow_providers_etlcraft/: __init__.py  hello.py
airflow_providers/apache_airflow_providers_etlcraft/src/apache_airflow_providers_etlcraft/configs/: get_configs.py
airflow_providers/apache_airflow_providers_etlcraft_airbyte/: README.md  pyproject.toml
airflow_providers/apache_airflow_providers_etlcraft_airbyte/apache_airflow_providers_etlcraft_airbyte/: __init__.py  enums.py  models.py  utils.py
airflow_providers/apache_airflow_providers_etlcraft_airbyte/apache_airflow_providers_etlcraft_airbyte/operators/: __init__.py  airbyte_create_connection_operator.py  airbyte_general_operator.py  airbyte_list_connections_operator.py  airbyte_list_destination_definitions_operator.py  airbyte_list_jobs_operator.py  airbyte_list_source_definitions_operator.py  airbyte_list_workspaces_operator.py  enums.py
airflow_providers/apache_airflow_providers_etlcraft_dags/: pyproject.toml
airflow_providers/apache_airflow_providers_etlcraft_dags/src/apache_airflow_providers_etlcraft/configs/: get_configs.py
airflow_providers/apache_airflow_providers_etlcraft_dags/src/apache_airflow_providers_etlcraft_dags/: exceptions.py
airflow_providers/apache_airflow_providers_etlcraft_dags/src/apache_airflow_providers_etlcraft_dags/configs/: get_configs.py  get_configs2.py
airflow_providers/apache_airflow_providers_etlcraft_dags/src/apache_airflow_providers_etlcraft_dags/dag_builder/: dag_builder.py
airflow_providers/apache_airflow_providers_etlcraft_dags/src/apache_airflow_providers_etlcraft_dags/dags/: template_configs_dag.py
airflow_providers/apache_airflow_providers_etlcraft_defaults/: README.md  pyproject.toml
airflow_providers/apache_airflow_providers_etlcraft_defaults/src/apache_airflow_providers_etlcraft_defaults/: __init__.py  get_etlcraft_defaults.py  metaconfigs.json  metadata.yaml
airflow_providers/apache_airflow_providers_etlcraft_defaults/tests/: test_get_etlcraft_defaults.py
config_templates/: metadata.yaml  presets.json
(+795 files in other folders)
