[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-providers-datacraft-airbyte"
version = "0.0.1"
authors = [
  { name="Adventum", email="n.sushchenko@adventum.ru" },
]
description = "Module for AirByte of Apache Airflow providers for etlCraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "apache-airflow>=2.9.3, <3.0",
    "airbyte_api",
]

[project.urls]
Homepage = "https://github.com/adventum/dbt-datacraft"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
editable = true

[tool.hatch.build.targets.wheel]
packages = ["airflow"]