[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache_airflow_providers_datacraft_airbyte"
version = "0.0.1"
authors = [
  { name="Adventum", email="n.sushchenko@adventum.ru" },
]
description = "Module for AirByte of Apache Airflow providers for etlCraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "apache-airflow>=2.9.3, <3.0",
    "airbyte_api",
    "apache_airflow_providers_datacraft_defaults @ file:../apache_airflow_providers_datacraft_defaults",
    "apache_airflow_providers_datacraft_dags @ file:../apache_airflow_providers_datacraft_dags",
]

[project.urls]
Homepage = "https://github.com/adventum/dbt-datacraft"

# [project.metadata]
# airflow-provider = {package_name = "apache_airflow_providers_datacraft_airbyte"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.dev]

[project.entry-points."apache_airflow_provider"]
provider_info = "apache_airflow_providers_datacraft_airbyte.provider:get_provider_info"

[tool.hatch.build.targets.wheel]
packages = ["src/apache_airflow_providers_datacraft_airbyte"]
