[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-providers-etlcraft-airbyte"
version = "0.1.0"
authors = [
  { name="Adventum", email="n.sushchenko@adventum.ru" },
]
description = "Module for AirByte of Apache Airflow providers for etlCraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "apache-airflow>=2.8.0, <3.0",
    "apache-airflow-providers-airbyte >= 3.8.1, <4.0.0",
    "pydantic >= 2.7.0, <3"
]

[project.urls]
Homepage = "https://github.com/adventum/dbt-etlcraft"
