[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache_airflow_providers_etlcraft_dags"
version = "0.0.1"
authors = [
  { name="Adventum", email="n.sushchenko@adventum.ru" },
]
description = "Apache Airflow providers for etlCraft"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/adventum/dbt-etlcraft"

dependencies = [
    "apache-airflow>=2.9.3, <3.0",
    "apache_airflow_providers_etlcraft_defaults"
]