[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apache_airflow_providers_datacraft_defaults"
version = "0.0.1"
authors = [
  { name="Adventum", email="n.sushchenko@adventum.ru" },
]
description = "Default configs for Apache Airflow providers for etlCraft"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/adventum/dbt-datacraft"

dependencies ="apache-airflow>=2.9.3, <3.0 Jinja2 PyYAML"

